--- a/index.html
+++ b/index.html
@@ -15,33 +15,31 @@
       flex-direction: column;
     }
 
-    iframe {
-      width: 100%;
-      height: calc(100% - 50px); /* Leave space for the text */
-      border: none;
-    }
-
-    .footer-text {
-      height: 50px;
+    .header-text {
       color: white;
       text-align: center;
       font-size: 24px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      padding: 10px 0;
+    }
+
+    iframe {
+      flex: 1;        /* Fill remaining space */
+      width: 100%;
+      border: none;
     }
   </style>
 </head>
 
 <body>
+  <div class="header-text">Hej Agnes</div>
+
   <iframe
     src="https://avgång.nu/Default?name=Studieg%C3%A5ngen&county=G%C3%B6teborg&maxdist=525&provider=Vasttrafik&uniquetrips=on"
     loading="eager">
   </iframe>
-
-  <div class="footer-text">Hej Agnes</div>
 </body>
 </html>
+
 
 
 
