--- a/index.html
+++ b/index.html
@@ -2,43 +2,86 @@
 <html lang="sv">
 <head>
   <meta charset="UTF-8">
-  <title>Avgångar – Studiegången</title>
+  <title>Avgångar</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
     html, body {
       margin: 0;
+      padding: 0;
       height: 100%;
       width: 100%;
-      background: #000;
+      background: #0d0d0d;
+      font-family: Arial, sans-serif;
+      color: #ffffff;
+    }
+
+    body {
+      display: -webkit-box;
+      display: -webkit-flex;
       display: flex;
+      -webkit-flex-direction: column;
       flex-direction: column;
+      background: #0d0d0d;
     }
 
-    .header-text {
-      color: white;
+    /* Header */
+    .header {
+      padding: 18px 12px;
       text-align: center;
-      font-size: 24px;
-      padding: 10px 0;
+      background: linear-gradient(to bottom, #141414, #0d0d0d);
+      border-bottom: 1px solid #1c1c1c;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.4);
     }
 
+    .greeting {
+      font-size: 28px;
+      font-weight: bold;
+      letter-spacing: 0.5px;
+      color: #f2f2f2;
+      text-shadow: 0 1px 2px rgba(0,0,0,0.6);
+    }
+
+    /* Content */
     iframe {
-      flex: 1;        /* Fill remaining space */
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+      flex: 1;
       width: 100%;
       border: none;
+      background: #000;
     }
   </style>
 </head>
 
 <body>
-  <div class="header-text">Hej Agnes</div>
+
+  <div class="header">
+    <div class="greeting" id="greeting">Hej</div>
+  </div>
 
   <iframe
-    src="https://avgång.nu/Default?name=Studieg%C3%A5ngen&county=G%C3%B6teborg&maxdist=525&provider=Vasttrafik&uniquetrips=on"
-    loading="eager">
+    src="https://avgång.nu/Default?name=Studieg%C3%A5ngen&county=G%C3%B6teborg&maxdist=525&provider=Vasttrafik&uniquetrips=on">
   </iframe>
+
+  <script>
+    (function () {
+      var hour = new Date().getHours();
+      var greeting;
+
+      if (hour >= 5 && hour < 10) {
+        greeting = "God morgon";
+      } else if (hour >= 10 && hour < 18) {
+        greeting = "Hej";
+      } else if (hour >= 18 && hour < 23) {
+        greeting = "God kväll";
+      } else {
+        greeting = "God natt";
+      }
+
+      document.getElementById("greeting").textContent = greeting;
+    })();
+  </script>
+
 </body>
 </html>
-
-
-
