--- a/index.html
+++ b/index.html
@@ -14,49 +14,43 @@
       background: #0d0d0d;
       font-family: Arial, sans-serif;
       color: #ffffff;
-    }
-
-    body {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-flex-direction: column;
-      flex-direction: column;
+      overflow: hidden; /* Viktigt för Android 4.4 */
     }
 
     /* Header */
     .header {
-      padding: 14px 12px 10px;
+      height: 60px;
+      line-height: 60px;
       text-align: center;
       background: #0d0d0d;
       border-bottom: 1px solid #1c1c1c;
-    }
-
-    .greeting {
       font-size: 24px;
       font-weight: bold;
-      letter-spacing: 0.4px;
     }
 
-    /* Container for iframe + overlay + datetime */
+    /* Wrapper som fyller resten av skärmen */
     .iframe-wrapper {
-      position: relative;
-      -webkit-box-flex: 1;
-      -webkit-flex: 1;
-      flex: 1;
-      width: 100%;
+      position: absolute;
+      top: 60px; /* samma som headern */
+      left: 0;
+      right: 0;
+      bottom: 0;
       overflow: hidden;
+      background: #000;
     }
 
     iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
       border: none;
       background: #000;
     }
 
-    /* Overlay to hide top rows of iframe */
-    .iframe-overlay {
+    /* Overlay top */
+    .iframe-overlay-top {
       position: absolute;
       top: 0;
       left: 0;
@@ -64,19 +58,31 @@
       height: 70px;
       background: #0d0d0d;
       pointer-events: none;
-      z-index: 1;
+      z-index: 2;
     }
 
-    /* Datum/tid ovanpå overlayen */
+    /* Overlay bottom */
+    .iframe-overlay-bottom {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 40px;
+      background: #0d0d0d;
+      pointer-events: none;
+      z-index: 2;
+    }
+
+    /* Datum/tid ovanpå overlay */
     .datetime-overlay {
       position: absolute;
       top: 10px;
       left: 0;
       width: 100%;
       text-align: center;
-      font-size: 40px;
+      font-size: 18px;
       color: #f2f2f2;
-      z-index: 2;
+      z-index: 3;
       pointer-events: none;
     }
   </style>
@@ -84,16 +90,15 @@
 
 <body>
 
-  <div class="header">
-    <div class="greeting" id="greeting">Hej</div>
-  </div>
+  <div class="header" id="greeting">Hej</div>
 
   <div class="iframe-wrapper">
     <iframe
       src="https://avgång.nu/Default?name=Studieg%C3%A5ngen&county=G%C3%B6teborg&maxdist=525&provider=Vasttrafik&uniquetrips=on">
     </iframe>
 
-    <div class="iframe-overlay"></div>
+    <div class="iframe-overlay-top"></div>
+    <div class="iframe-overlay-bottom"></div>
     <div class="datetime-overlay" id="datetime">Laddar tid…</div>
   </div>
 
