--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       text-align: center;
       background: #0d0d0d;
       border-bottom: 1px solid #1c1c1c;
-      font-size: 24px;
+      font-size: 50px;
       font-weight: bold;
     }
 
@@ -56,7 +56,7 @@
       left: 0;
       width: 100%;
       height: 200px;
-      background: #0d0d0d;
+      background: #000000;
       pointer-events: none;
       z-index: 2;
     }
@@ -67,8 +67,8 @@
       bottom: 0;
       left: 0;
       width: 100%;
-      height: 40px;
-      background: #0d0d0d;
+      height: 100px;
+      background: #000000;
       pointer-events: none;
       z-index: 2;
     }
@@ -80,7 +80,7 @@
       left: 0;
       width: 100%;
       text-align: center;
-      font-size: 18px;
+      font-size: 50px;
       color: #f2f2f2;
       z-index: 3;
       pointer-events: none;
