--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       padding: 0;
       height: 100%;
       width: 100%;
-      background: #0d0d0d;
+      background: #000000;
       font-family: Arial, sans-serif;
       color: #ffffff;
       overflow: hidden; /* Viktigt för Android 4.4 */
@@ -19,10 +19,10 @@
 
     /* Header */
     .header {
-      height: 60px;
-      line-height: 60px;
+      height: 75px;
+      line-height: 75px;
       text-align: center;
-      background: #0d0d0d;
+      background: #000000;
       border-bottom: 1px solid #1c1c1c;
       font-size: 50px;
       font-weight: bold;
@@ -67,7 +67,7 @@
       bottom: 0;
       left: 0;
       width: 100%;
-      height: 100px;
+      height: 200px;
       background: #000000;
       pointer-events: none;
       z-index: 2;
@@ -108,9 +108,9 @@
       var hour = new Date().getHours();
       var greeting;
 
-      if (hour >= 5 && hour < 10) greeting = "God morgon";
-      else if (hour >= 10 && hour < 18) greeting = "Hej";
-      else if (hour >= 18 && hour < 23) greeting = "God kväll";
+      if (hour >= 5 && hour < 10) greeting = "God morgon Agnes";
+      else if (hour >= 10 && hour < 18) greeting = "Hej Agnes";
+      else if (hour >= 18 && hour < 23) greeting = "God kväll Agnes";
       else greeting = "God natt";
 
       document.getElementById("greeting").textContent = greeting;
